# settingslib

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  pyproject.toml  setup.py
docs/: Settings.md  context_manager.md  index.md  installation.md
docs/api/: NestedSettings.md  Setting.md  Settings.md  SettingsManager.md
docs/guides/: nestingSettings.md
settingslib/: __init__.py  settings.py
tests/: test.py
tests/expected/: expected.json  expected.toml
