[project]
dynamic = ["version"]
name = "settingslib"
dependencies = [
    "tomlkit==0.13.3",
    "typing_extensions==4.15.0"
]
requires-python = ">=3.10"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [{name = "Nicolás Miranda Colivoro", email = "nmcolivoro@outlook.cl"}]
keywords = ["settings", "config", "configuration", "toml"]
classifiers = [
    "Development Status :: 4 - Beta"
]
license = { file = "LICENSE" }